sandbox/output
StringToIntParser.java:2: error: cannot find symbol
    List<String> parse(String string) {
    ^
  symbol:   class List
  location: class StringToIntParser
StringCalculator.java:5: error: non-static method parse(String) cannot be referenced from a static context
        List<String> numbers = StringToIntParser.parse(string);
                                                ^
2 errors
